Fix some scanning and layout issues.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/images/background.svg');
+    background-image: url('../images/background.svg');
     font-family: 'Exo', sans-serif;
 }
 
